--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.grid-container {
+#grid-container {
   height: 200px;
   width: 600px;
   display:flex;
@@ -13,9 +13,18 @@
   font-size: 20px;
   font-family: 'Poppins', sans-serif;
 }
-.pic {
+div.pic {
   min-height: 100px;
-  
+
+}
+.sidebox {
+  height: 200px;
+  width: 600px;
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-between;
 }
 
 
@@ -175,4 +184,15 @@ body {
   height: 120px;
   width: 120px;
   object-fit: cover;
+}
+.freebirdFormviewerViewCenteredContent{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.dev-icons {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
 }
