--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body {
     align-items: center;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    background-color:pink;
+    background-color:#D4F1F4;
   }
   header {
     width: 100%;
