--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
  align-content: center; 
 }
 .skills{
-  background-color:white;
+  background-color:#D4F1F4;
   /* width: 23%; */
   /* height: 100px; */
   margin:10px;
